# qontinui-schemas

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  commitlint.config.cjs  package.json  pyproject.toml  release-please-config.json  release-please-manifest.json
.github/workflows/: candidate-ci.yml  ci-integrity.yml  commitlint.yml  publish-rust.yml  publish.yml  release-please.yml  runner-consumer-check.yml  rust-ci.yml  schema-drift.yml  secret-scan.yml
.pre-commit-hooks/: block-claude-attribution.sh
code-graph/: Cargo.toml
code-graph/src/: code_graph.rs  import_resolver.rs  layering.rs  lib.rs
rust/: CHANGELOG.md  Cargo.toml
rust-runner-client/: CHANGELOG.md  Cargo.toml  README.md
rust-runner-client/src/: lib.rs  placement.rs
rust-vision-core/: Cargo.toml
rust-vision-core/src/: analyzers.rs  cache.rs  contract.rs  element_snapshot.rs  encode.rs  error.rs  frame.rs  lib.rs  pipeline.rs  stage.rs  strip.rs
rust-vision-core/src/analyzers/: color.rs  dynamic.rs  elements.rs  layout.rs  mod.rs  typography.rs
rust-vision-core/src/assertions/: mod.rs
rust-vision-core/tests/: claude_vision_contract.rs  corpus.rs
rust-vision-core/tests/fixtures/analyzer_corpus/: README.md
rust-vision-core/tests/fixtures/analyzer_corpus/frames/: 001-overlap.json  002-alignment-jitter.json  003-tiny-target.json  004-no-clipping-pass.json  005-clipping-fail.json  006-offscreen-negative-origin.json
rust-vision-core/tests/fixtures/analyzer_corpus/golden/: 001-overlap.json  002-alignment-jitter.json  003-tiny-target.json  004-no-clipping-pass.json  005-clipping-fail.json  006-offscreen-negative-origin.json
rust/src/: accessibility.rs  ai_workflows.rs  app_events.rs  apps.rs  canonical_hash.rs  completeness_eval.rs  completeness_verdict.rs  config.rs  constraints.rs  dev_signatures.rs  dev_states.rs  discovery.rs  endpoint_for.rs  execution.rs  federation.rs  findings.rs  functional_spec.rs  geometry.rs  git_ops.rs  helper_task.rs  ir.rs  lib.rs  mcp_config.rs  memory.rs  orchestration_config.rs  priorities_profile.rs  process_management.rs  rag.rs  runner.rs  scheduler.rs  sdk_features.rs  spec_api_events.rs  spec_check.rs  state_machine.rs  targets.rs  task_run.rs  terminal.rs  text_norm.rs  ticket_system.rs  tree_events.rs  (+6 more)
rust/src/wire/: mod.rs  placement.rs  runner_kind.rs  webview2.rs
rust/tests/: functional_spec_fixtures.rs  round_trip.rs  vertical_slice.rs
rust/tests/fixtures/functional_spec/: connect-runner.functional_spec.json  connect-runner.profile.json  invoices.completeness_verdict.json  invoices.functional_spec.json
scripts/: __init__.py  add_discriminators.py  compile_typescript.mjs  generate_typescript.py
src/: action-types.json
src/qontinui_schemas/: __init__.py  test_specifications.py
src/qontinui_schemas/accessibility/: __init__.py  config.py  enums.py  models.py
src/qontinui_schemas/api/: __init__.py  evaluation.py  execution.py  feedback.py  prompt_versions.py  rag.py  testing.py
src/qontinui_schemas/commands/: __init__.py  click_analysis.py  discovery.py  recording_pipeline.py  state_machine.py  vision.py
src/qontinui_schemas/common/: __init__.py  metadata.py  stats.py  time.py
src/qontinui_schemas/config/: __init__.py  qontinui_properties.py
src/qontinui_schemas/config/models/: __init__.py  action.py  ai_prompts.py  base_types.py  code_actions.py  config_root.py  context.py  control_flow.py  data_operations.py  execution.py  expectations.py  find_actions.py  geometry.py  keyboard_actions.py  logging.py  monitors.py  mouse_actions.py  scheduling.py  screenshots.py  search.py  shell_actions.py  state_actions.py  state_machine.py  targets.py  verification.py  workflow.py
src/qontinui_schemas/config/property_groups/: __init__.py  core_properties.py  debug_properties.py  display_properties.py  input_properties.py  logging_properties.py  output_properties.py  timing_properties.py  vision_properties.py
src/qontinui_schemas/descriptions/: __init__.py  models.py
src/qontinui_schemas/discovery/: __init__.py  models.py
src/qontinui_schemas/events/: __init__.py  healing_events.py  tree_events.py
src/qontinui_schemas/execution/: __init__.py  action.py  enums.py  issue.py  run.py  screenshot.py  tree_event.py  verification_result.py
src/qontinui_schemas/extraction/: __init__.py  models.py
src/qontinui_schemas/findings/: __init__.py  enums.py  models.py
src/qontinui_schemas/rag/: __init__.py  models.py
src/qontinui_schemas/task_run/: __init__.py  enums.py  models.py
src/qontinui_schemas/template_capture/: __init__.py  models.py
src/qontinui_schemas/testing/: __init__.py  assertions.py  coverage.py  environment.py  visual.py
src/qontinui_schemas/unified_workflow/: __init__.py  models.py
tests/: __init__.py  test_accessibility.py  test_round_trip.py
tests/fixtures/: constraint_sample.json  scheduled_task_sample.json  unified_workflow_frame_sample.json  unified_workflow_full_sample.json  workflow_with_unknown_step_sample.json
ts/: CHANGELOG.md  CONTRACT.md  README.md  package-lock.json  package.json  tsup.config.ts
ts/src/: discovery.ts  index.ts  render-log.ts
ts/src/accessibility/: _api.ts
ts/src/canvas/: index.ts
ts/src/chat/: index.ts
ts/src/config/: _api.ts
ts/src/constraints/: _api.ts  index.ts
ts/src/execution/: _api.ts  index.ts
ts/src/geometry/: _api.ts
ts/src/known-issues/: index.ts
ts/src/memory/: _api.ts
ts/src/rag/: _api.ts
ts/src/runner/: _api.ts
ts/src/scheduler/: _api.ts  index.ts
ts/src/state-machine/: _api.ts  index.ts
ts/src/targets/: _api.ts
ts/src/task-run/: _api.ts  index.ts
ts/src/tauri-events/: _api.ts
ts/src/tree-events/: _api.ts
ts/src/ui-bridge-ir/: adapter.ts  document.ts  element-criteria.ts  group.ts  index.ts  ir.schema.json  primitives.ts  projection.ts  state.ts  transition.ts
ts/src/ui-bridge-ir/__tests__/: legacy-roster.test.ts  projection.test.ts
ts/src/workflow/: _api.ts  action-plan.ts  index.ts  skill.ts
