[tool.poetry]
name = "qontinui-schemas"
version = "0.2.0"
description = "Shared Pydantic schemas for the Qontinui ecosystem"
authors = ["Joshua Spinak <joshua.spinak@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/qontinui/qontinui-schemas"
repository = "https://github.com/qontinui/qontinui-schemas"
keywords = ["qontinui", "schemas", "pydantic", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
packages = [
    { include = "qontinui_schemas", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10"
isort = "^7.0"
ruff = "^0.14"
mypy = "^1.14"
pydantic-to-typescript = "^1.0.10"

[tool.poetry.scripts]
generate-ts = "scripts.generate_typescript:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
