[tool.poetry]
name = "qontinui-schemas"
version = "0.2.1"
description = "Shared Pydantic schemas for the Qontinui ecosystem"
authors = ["Joshua Spinak <joshua.spinak@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/qontinui/qontinui-schemas"
repository = "https://github.com/qontinui/qontinui-schemas"
keywords = ["qontinui", "schemas", "pydantic", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
packages = [
    { include = "qontinui_schemas", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.0.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.15"
mypy = "^1.14"
pydantic-to-typescript = "^2.0"
bandit = "^1.9.2"
pytest = "^9"
pytest-asyncio = "^1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["src/qontinui_schemas/generated"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"src/qontinui_schemas/generated/**" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]
exclude = ["src/qontinui_schemas/generated"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
