[package]
name = "qontinui-vision-core"
version = "0.1.2"
description = "Image pipeline + output contract for Qontinui's vision surface. Composable stages producing bytes that satisfy a declared model-vision contract (e.g., Claude vision)."
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
proptest = "1"
tempfile = "3"

# Standalone analyzer CLI — a hermetic, version-pinned wrapper over this
# crate's analyzer + assertion API, runnable in CI WITHOUT a qontinui-runner
# process. The runner's `/vision/*` HTTP endpoints remain a parallel consumer
# of the same library code.
[[bin]]
name = "vision-audit"
path = "src/bin/vision_audit.rs"
